--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <title>Unplugged</title>
+
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -22,7 +24,77 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    <header>
+        <div class="content-wrapper">
+            <a href="#"><img src="" alt="unplugged logo"></a>
+            <div class="header-divider">
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="faq/index.html" target="_blank">FAQ</a>
+                    </li>
+                    <li>
+                        <a href="about/index.html" target="_blank">About</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+      <section>
+        <div class="content-wrapper">
+          <h1>Retreat from the desk,<br>
+          return refreshed.</h1>
+        </div>
+
+      </section>
+
+      <aside>
+          <div class="content-wrapper">
+              <div class="form-content">
+                  <h3>Want to join the next retreat?</h3>
+                  <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+              </div>
+              <div class="signup-form">
+                <h3>Find out more</h3>
+                <input type="text" name="name" value="email address">
+                <input type="button" value="Download Itinerary">
+              </div>
+          </div>
+      </aside>
+
+    </main>
+
+    <footer>
+        <div class="content-wrapper"
+            <div class="footer-content">
+                <address class="contact">
+                    <h3>Contact</h3>
+                    <p>555-555-5555 <br>
+                      hello@unplugged.com</p>
+                </address>
+                <div class="social">
+                    <h3>Social</h3>
+                    <div class="social-icons">
+                      <p><a href="https://www.facebook.com/yourpage"></a></p>
+                      <p><a href="https://www.twitter.com/yourpage"></a></p>
+                      <p><a href="https://www.instagram.com/yourpage"></a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+
+
+
+
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
