added bottom half of html content

--- a/index.html
+++ b/index.html
@@ -43,19 +43,20 @@
     </header>
 
     <main>
-      <section>
+      <section class="hero-area"> 
         <div class="content-wrapper">
-          <h1>Retreat from the desk,<br>
-          return refreshed.</h1>
+          <h1>Retreat from the desk, return refreshed.</h1>
         </div>
 
       </section>
 
       <aside>
           <div class="content-wrapper">
-              <div class="form-content">
+              <div class="form-description">
                   <h3>Want to join the next retreat?</h3>
-                  <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+                  <p>
+                    Find out when we are holding our next retreat and how your company or team can sign up!
+                  </p>
               </div>
               <div class="signup-form">
                 <h3>Find out more</h3>
@@ -65,25 +66,85 @@
           </div>
       </aside>
 
+      <section class="features">
+          <h2>Have the work week you always dreamed of - without the bad wifi.
+          </h2>
+          <div class="features-items">
+              <article>
+                  <p class="fontawesome-icon"></p>
+                  <p class="features-item-description">
+                    Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+                  </p>
+              </article>
+              <article>
+                  <p class="fontawesome-icon"></p>
+                  <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 break rooms.</p> 
+              </article>
+              <article>
+                  <p class="fontawesome-icon"></p>
+                  <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+              </article>
+              <article>
+                  <p class="fontawesome-icon"></p>
+                  <p>5 outdoor obstacles courses, including private beach &#189 mile from bungalow.</p>
+              </article>
+              <article>
+                  <p class="fontawesome-icon"></p>
+                  <p>Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
+              </article>
+              <article>
+                  <p class="fontawesome-icon"></p>
+                  <p>Dedicated computer room for times that must wifi.</p>
+              </article>
+          </div>    
+      </section>
+
+      <section class="reviews">
+          <div class="content-wrapper">
+              <h3>Be a better team in 5 days, like this one.</h3>
+              <article>
+                  <p class="review-image"></p>
+                  <h4>LaCrue Bottling Co. <br>
+                      October 2018
+                  </h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </article>
+          </div>
+      </section>
+
     </main>
 
     <footer>
         <div class="content-wrapper"
             <div class="footer-content">
-                <address class="contact">
+                <address>
                     <h3>Contact</h3>
-                    <p>555-555-5555 <br>
-                      hello@unplugged.com</p>
+                    <p>
+                      555-555-5555 <br>
+                      hello@unplugged.com
+                    </p>
                 </address>
                 <div class="social">
                     <h3>Social</h3>
                     <div class="social-icons">
-                      <p><a href="https://www.facebook.com/yourpage"></a></p>
-                      <p><a href="https://www.twitter.com/yourpage"></a></p>
-                      <p><a href="https://www.instagram.com/yourpage"></a></p>
+                      <p>
+                        <a href="https://www.facebook.com/yourpage"></a>
+                      </p>
+                      <p>
+                        <a href="https://www.twitter.com/yourpage"></a>
+                      </p>
+                      <p>
+                        <a href="https://www.instagram.com/yourpage"></a>
+                      </p>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="copyright">
+          <p>
+            Copyright 2019 | Unplugged
+          </p>
         </div>
     </footer>
 
