--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,108 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  
+  <header>
+      <div class="content-wrapper">
+          <a href="#"><img src="" alt="unplugged logo"></a>
+          <div class="header-divider">
+          </div>
+          <nav>
+              <ul>
+                  <li>
+                      <a href="faq/index.html" target="_blank">FAQ</a>
+                  </li>
+                  <li>
+                      <a href="about/index.html" target="_blank">About</a>
+                  </li>
+              </ul>
+          </nav>
+      </div>
+  </header>
+
+  <main>
+      <section class="mission">
+          <div class="content-wrapper">
+              <div class="mission-content">
+                  <h1>Our Mission - we want to make you the team you always wanted to be.
+                  </h1>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+                  </p>
+                  <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+                  </p>
+              </div>
+          </div> <!-- end of Content Wrapper -->
+      </section>
+
+      <section class="map">
+          <figure>
+
+          </figure>
+      </section>
+
+      <section class="contact-section">
+          <div class="content-wrapper">
+              <h1>
+                Contact us, because you all need this.
+              </h1>
+              <address>
+                <div class="general-info-contact">
+                    <h4>General Information</h4>
+                    <p>
+                      333 Main St., Lake Geneva WI 53147<br>
+                      555-555-5555 <br>
+                      hello@unplugged.com
+                    </p>
+                </div>
+                <div class="facilitator-contact">
+                    <h4>Chat with a Facilitator</h4>
+                    <p>
+                      555-555-5556 <br>
+                      facilitator@unplugged.com
+                    </p>
+                </div>
+              </address>
+          </div>
+      </section>
+
+  </main>
+
+  <footer>
+      <div class="content-wrapper"
+          <div class="footer-content">
+              <address>
+                  <h3>Contact</h3>
+                  <p>
+                    555-555-5555 <br>
+                    hello@unplugged.com
+                  </p>
+              </address>
+              <div class="social">
+                  <h3>Social</h3>
+                  <div class="social-icons">
+                    <p>
+                      <a href="https://www.facebook.com/yourpage"></a>
+                    </p>
+                    <p>
+                      <a href="https://www.twitter.com/yourpage"></a>
+                    </p>
+                    <p>
+                      <a href="https://www.instagram.com/yourpage"></a>
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <div class="copyright">
+        <p>
+          Copyright 2019 | Unplugged
+        </p>
+      </div>
+  </footer>
+
   <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
