--- a/faq/index.html
+++ b/faq/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
+  <title>Unplugged | FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -22,7 +22,87 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
+  <header>
+    <div class="content-wrapper">
+        <a href="#"><img src="" alt="unplugged logo"></a>
+        <div class="header-divider">
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="faq/index.html" target="_blank">FAQ</a>
+                </li>
+                <li>
+                    <a href="about/index.html" target="_blank">About</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<main>
+    <section class="faq">
+        <div class="content-wrapper">
+            <div class="faq-content">
+                <h1>Frequently Asked Questions
+                </h1>
+                <p>
+                  <span>How do I get to the Unplugged retreat?</span><br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+                </p>
+                <p>
+                  <span>What kind of team is right for the Unplugged retreat?</span><br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+                </p>
+                <p>
+                  <span>What size teams can you accommodate?</span><br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+                </p>
+                <p>
+                  <span>Is there really no wifi available?</span><br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+                </p>
+            </div>
+        </div> <!-- end of Content Wrapper -->
+    </section>
+
+</main>
+
+<footer>
+    <div class="content-wrapper"
+        <div class="footer-content">
+            <address>
+                <h3>Contact</h3>
+                <p>
+                  555-555-5555 <br>
+                  hello@unplugged.com
+                </p>
+            </address>
+            <div class="social">
+                <h3>Social</h3>
+                <div class="social-icons">
+                  <p>
+                    <a href="https://www.facebook.com/yourpage"></a>
+                  </p>
+                  <p>
+                    <a href="https://www.twitter.com/yourpage"></a>
+                  </p>
+                  <p>
+                    <a href="https://www.instagram.com/yourpage"></a>
+                  </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="copyright">
+      <p>
+        Copyright 2019 | Unplugged
+      </p>
+    </div>
+</footer>
+
   <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
