--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  
+
   <header>
       <div class="content-wrapper">
           <a href="#"><img src="" alt="unplugged logo"></a>
@@ -51,7 +51,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
                   </p>
                   <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
                   </p>
               </div>
           </div> <!-- end of Content Wrapper -->
@@ -69,7 +69,7 @@
                 Contact us, because you all need this.
               </h1>
               <address>
-                <div class="general-info-contact">
+                <div class="general-info">
                     <h4>General Information</h4>
                     <p>
                       333 Main St., Lake Geneva WI 53147<br>
@@ -77,7 +77,7 @@
                       hello@unplugged.com
                     </p>
                 </div>
-                <div class="facilitator-contact">
+                <div class="facilitator">
                     <h4>Chat with a Facilitator</h4>
                     <p>
                       555-555-5556 <br>
