--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
 
     <main>
-      <section class="hero-area"> 
+      <section class="hero-area">
         <div class="content-wrapper">
           <h1>Retreat from the desk, return refreshed.</h1>
         </div>
@@ -76,25 +76,26 @@
               </article>
               <article>
                   <p class="fontawesome-icon"></p>
-                  <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 break rooms.</p> 
+                  <pclass="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 break rooms.</p>
               </article>
               <article>
                   <p class="fontawesome-icon"></p>
-                  <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+                  <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
               </article>
               <article>
                   <p class="fontawesome-icon"></p>
-                  <p>5 outdoor obstacles courses, including private beach &#189 mile from bungalow.</p>
+                  <p class="features-item-description">5 outdoor obstacles courses, including private beach 1/2 mile from bungalow.
+                  </p>
               </article>
               <article>
                   <p class="fontawesome-icon"></p>
-                  <p>Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
+                  <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
               </article>
               <article>
                   <p class="fontawesome-icon"></p>
-                  <p>Dedicated computer room for times that must wifi.</p>
+                  <p class="features-item-description">Dedicated computer room for times that must wifi.</p>
               </article>
-          </div>    
+          </div>
       </section>
 
       <section class="reviews">
