farmated mobile layout

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </article>
               <article>
                   <p class="fontawesome-icon"></p>
-                  <pclass="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 break rooms.</p>
+                  <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 break rooms.</p>
               </article>
               <article>
                   <p class="fontawesome-icon"></p>
@@ -100,7 +100,7 @@
 
       <section class="reviews">
           <div class="content-wrapper">
-              <h3>Be a better team in 5 days, like this one.</h3>
+              <h3>Be a better team in 5 days, like these.</h3>
               <article>
                   <p class="review-image"></p>
                   <h4>LaCrue Bottling Co. <br>
