added breakpoints for tablet screen to main css and modified html code

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
               <h2>Be a better team in 5 days, like these.</h2>
               <article>
                   <p class="review-image"></p>
-                  <h3>LaCrue Bottling Co. <br>
-                      October 2018
-                  </h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                  <div>
+                      <h3>LaCrue Bottling Co. October 2018</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
               </article>
           </div>
       </section>
@@ -116,9 +116,9 @@
     </main>
 
     <footer>
-        <div class="content-wrapper"
+        <div class="content-wrapper">
             <div class="footer-content">
-                <address>
+                <address class="contact">
                     <h3>Contact</h3>
                     <p>
                       555-555-5555 <br>
