--- a/faq/index.html
+++ b/faq/index.html
@@ -44,35 +44,36 @@
 <main>
     <section class="faq">
         <div class="content-wrapper">
-            <div class="faq-content">
-                <h1>Frequently Asked Questions
-                </h1>
-                <p>
-                  <span>How do I get to the Unplugged retreat?</span><br>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
-                </p>
-                <p>
-                  <span>What kind of team is right for the Unplugged retreat?</span><br>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
-                </p>
-                <p>
-                  <span>What size teams can you accommodate?</span><br>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
-                </p>
-                <p>
-                  <span>Is there really no wifi available?</span><br>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
-                </p>
-            </div>
+            <h2>Frequently Asked Questions</h2>
+                <div class="faq-content">
+                  <h4>How do I get to the Unplugged retreat?</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                  </p>
+                </div>
+                <div class="faq-content">
+                  <h4>What kind of team is right for the Unplugged retreat?</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                  </p>
+                </div>
+                <div class="faq-content">
+                  <h4>What size teams can you accommodate?</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                  </p>
+                </div>
+                <div class="faq-content">
+                  <h4>Is there really no wifi available?</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                  </p>
+                </div>
         </div> <!-- end of Content Wrapper -->
     </section>
 
 </main>
 
 <footer>
-    <div class="content-wrapper"
+    <div class="content-wrapper">
         <div class="footer-content">
-            <address>
+            <address class="contact">
                 <h3>Contact</h3>
                 <p>
                   555-555-5555 <br>
