--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="content-wrapper">
               <h2>Be a better team in 5 days, like these.</h2>
               <article>
-                  <p class="review-image"></p>
+                  <!-- <p class="review-image"></p> -->
                   <div>
                       <h3>LaCrue Bottling Co. October 2018</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
