added text styles to CSS

--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,9 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -79,7 +82,7 @@
                 <div>
                     <h4>Chat with a Facilitator</h4>
                     <p>
-                      555-555-5556 <br>
+                      555-555-5556<br>
                       facilitator@unplugged.com
                     </p>
                 </div>
