--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -102,7 +105,7 @@
 
       <section class="reviews">
           <div class="content-wrapper">
-              <h2>Be a better team in 5 days, like these.</h2>
+              <h2>Be a better team in 5 days, like this one.</h2>
               <article>
                   <!-- <p class="review-image"></p> -->
                   <div>
