made images responsive and added in the images

--- a/faq/index.html
+++ b/faq/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
-  
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
@@ -28,7 +28,9 @@
 
   <header>
     <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo"></a>
+        <figure>
+          <a href="#"><img src="../img/logo.png" alt="unplugged logo"></a>
+        </figure>
         <div class="header-divider">
         </div>
         <nav>
