added font awesome icons for feature section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
+  <!-- FontAwesome CDN -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
 <body>
@@ -75,30 +78,42 @@
               </h2>
               <div class="features-items">
                   <article>
-                      <p class="fontawesome-icon"></p>
+                      <p class="fontawesome-icon">
+                        <i class="fas fa-campground"></i>
+                      </p>
                       <p class="features-item-description">
                         Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
                       </p>
                   </article>
                   <article>
-                      <p class="fontawesome-icon"></p>
+                      <p class="fontawesome-icon">
+                        <i class="fas fa-bed"></i>
+                      </p>
                       <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 break rooms.</p>
                   </article>
                   <article>
-                      <p class="fontawesome-icon"></p>
+                      <p class="fontawesome-icon">
+                        <i class="fas fa-utensils"></i>
+                      </p>
                       <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
                   </article>
                   <article>
-                      <p class="fontawesome-icon"></p>
+                      <p class="fontawesome-icon">
+                        <i class="fas fa-shoe-prints"></i>
+                      </p>
                       <p class="features-item-description">5 outdoor obstacles courses, including private beach 1/2 mile from bungalow.
                       </p>
                   </article>
                   <article>
-                      <p class="fontawesome-icon"></p>
+                      <p class="fontawesome-icon">
+                        <i class="fas fa-smile"></i>
+                      </p>
                       <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
                   </article>
                   <article>
-                      <p class="fontawesome-icon"></p>
+                      <p class="fontawesome-icon">
+                        <i class="fas fa-wifi"></i>
+                      </p>
                       <p class="features-item-description">Dedicated computer room for times that must wifi.</p>
                   </article>
               </div>
@@ -136,13 +151,19 @@
                     <h3>Social</h3>
                     <div class="social-icons">
                       <p>
-                        <a href="https://www.facebook.com/yourpage"></a>
+                        <i class="fab fa-facebook">
+                          <a href="https://www.facebook.com/yourpage"></a>
+                        </i>
                       </p>
                       <p>
-                        <a href="https://www.twitter.com/yourpage"></a>
+                        <i class="fab fa-twitter">
+                          <a href="https://www.twitter.com/yourpage"></a>
+                        </i>
                       </p>
                       <p>
-                        <a href="https://www.instagram.com/yourpage"></a>
+                        <i class="fab fa-instagram">
+                          <a href="https://www.instagram.com/yourpage"></a>
+                        </i>
                       </p>
                     </div>
                 </div>
