--- a/about/index.html
+++ b/about/index.html
@@ -111,13 +111,18 @@
                   <h3>Social</h3>
                   <div class="social-icons">
                     <p>
-                      <a href="https://www.facebook.com/yourpage"></a>
+                      <a href="https://www.facebook.com"><i class="fab fa-facebook"></i>
+                      </a>
                     </p>
                     <p>
-                      <a href="https://www.twitter.com/yourpage"></a>
+                      <a href="https://www.twitter.com">
+                        <i class="fab fa-twitter"></i>
+                      </a>
                     </p>
                     <p>
-                      <a href="https://www.instagram.com/yourpage"></a>
+                      <a href="https://www.instagram.com">
+                        <i class="fab fa-instagram"></i>
+                      </a>
                     </p>
                   </div>
               </div>
