--- a/index.html
+++ b/index.html
@@ -151,19 +151,18 @@
                     <h3>Social</h3>
                     <div class="social-icons">
                       <p>
-                        <i class="fab fa-facebook">
-                          <a href="https://www.facebook.com/yourpage"></a>
-                        </i>
+                        <a href="https://www.facebook.com"><i class="fab fa-facebook"></i>
+                        </a>
                       </p>
                       <p>
-                        <i class="fab fa-twitter">
-                          <a href="https://www.twitter.com/yourpage"></a>
-                        </i>
+                        <a href="https://www.twitter.com">
+                          <i class="fab fa-twitter"></i>
+                        </a>
                       </p>
                       <p>
-                        <i class="fab fa-instagram">
-                          <a href="https://www.instagram.com/yourpage"></a>
-                        </i>
+                        <a href="https://www.instagram.com">
+                          <i class="fab fa-instagram"></i>
+                        </a>                
                       </p>
                     </div>
                 </div>
