--- a/about/index.html
+++ b/about/index.html
@@ -39,10 +39,10 @@
           <nav>
               <ul>
                   <li>
-                      <a href="faq/index.html" target="_blank">FAQ</a>
+                      <a href="../faq/index.html" target="_blank">FAQ</a>
                   </li>
                   <li>
-                      <a href="about/index.html" target="_blank">About</a>
+                      <a href="../about/index.html" target="_blank">About</a>
                   </li>
               </ul>
           </nav>
@@ -135,7 +135,6 @@
         </p>
       </div>
   </footer>
-
   <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
