--- a/faq/index.html
+++ b/faq/index.html
@@ -39,10 +39,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="faq/index.html" target="_blank">FAQ</a>
+                    <a href="../faq/index.html" target="_blank">FAQ</a>
                 </li>
                 <li>
-                    <a href="about/index.html" target="_blank">About</a>
+                    <a href="../about/index.html" target="_blank">About</a>
                 </li>
             </ul>
         </nav>
@@ -78,7 +78,7 @@
 
 </main>
 
-<footer>
+  <footer>
     <div class="content-wrapper">
         <div class="footer-content">
             <address class="contact">
@@ -115,7 +115,7 @@
         Copyright 2019 | Unplugged
       </p>
     </div>
-</footer>
+  </footer>
 
   <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
